[package]
name = "kovi-plugin-cmd"
version = "0.2.0"
edition = "2021"
description = "Kovi 的管理插件，通过消息命令配置 Kovi"
keywords = ["kovi", "kovi-plugin"]
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]

[dependencies]
kovi = ">=0.12.0"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33.0"
